--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <!-- Menu -->
   <div id='menu'>
     <!-- Create form -->
-    <form onsubmit="sendForm();return false">
+    <form onsubmit="joinForm();return false">
       <div class="row">
         <div class="form-input col-6 col-s-12">
           <label for="input_nickname">Nick name:</label><br>
@@ -43,10 +43,10 @@
         <div class="form-input col-6 col-s-12">
           <label for="input_starship">Starship:</label><br>
           <select id="input_starship" name="select">
-            <option value="value1">Type 1</option>
-            <option value="value2" selected>Type 2</option>
-            <option value="value3">Type 3</option>
-            <option value="value4">Type 4</option>
+            <option value="Batship">Batship</option>
+            <option value="Battleship" selected>Battleship</option>
+            <option value="Spaceship">Spaceship</option>
+            <option value="USSEnterprice">USSEnterprice</option>
           </select>
          </div>
         <div class="form-input col-6 col-s-12">
@@ -66,7 +66,7 @@
     <!-- End Create form -->
     <hr>
     <!-- Join form -->
-    <form  onsubmit="sendForm();return false">
+    <form  onsubmit="joinForm();return false">
       <div class="row">
         <div class="form-input col-12 col-s-12">
           <label for="input_gamecode">Game code:</label><br>
@@ -91,10 +91,10 @@
         <div class="form-input col-6 col-s-12">
           <label for="input_starship_join">Starship:</label><br>
           <select id="input_starship_join" name="select">
-            <option value="value1">Type 1</option>
-            <option value="value2" selected>Type 2</option>
-            <option value="value3">Type 3</option>
-            <option value="value4">Type 4</option>
+            <option value="Batship">Batship</option>
+            <option value="Battleship" selected>Battleship</option>
+            <option value="Spaceship">Spaceship</option>
+            <option value="USSEnterprice">USSEnterprice</option>
           </select>
          </div>
         <div class="form-input col-6 col-s-12">
