show new ships added

--- a/src/index.html
+++ b/src/index.html
@@ -91,10 +91,10 @@
         <div class="form-input col-6 col-s-12">
           <label for="input_starship_join">Starship:</label><br>
           <select id="input_starship_join" name="select">
-            <option value="Batship">Batship</option>
-            <option value="Battleship" selected>Battleship</option>
-            <option value="Spaceship">Spaceship</option>
-            <option value="USSEnterprice">USSEnterprice</option>
+            <option value="batship">Batship</option>
+            <option value="battleship" selected>Battleship</option>
+            <option value="spaceship">Spaceship</option>
+            <option value="ussenterprise">USS Enterprise</option>
           </select>
          </div>
         <div class="form-input col-6 col-s-12">
