added basic shooting functionality

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 
   <!-- Scripts -->
   <script src="https://unpkg.com/rsup-mqtt"></script>
+  
   <script src="./scripts/main.js"></script>
 </head>
 
@@ -22,6 +23,11 @@
   <h1 class="title">Hello World</h1>
   <noscript>Your browser does not support JavaScript!</noscript>
   <div id='galaxy'></div>
+
+  <br/>
+  <div id='room'></div>
+  <div id='bullet'></div>
+     
 </body>
 
 </html>
