Added mirroring of movements on all players in a room

--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,8 @@
         <div class="form-input col-6 col-s-12">
           <label for="input_gender">Gender:</label><br>
           <select id="input_gender" name="gender">
-            <option value="M">M</option>
-            <option value="F" selected>F</option>
+            <option value="Male">Male</option>
+            <option value="Female" selected>Female</option>
             <option value="0">NO Binary</option>
           </select>
         </div>
@@ -84,8 +84,8 @@
         <div class="form-input col-6 col-s-12">
           <label for="input_gender_join">Gender:</label><br>
           <select id="input_gender_join" name="gender">
-            <option value="M">M</option>
-            <option value="F" selected>F</option>
+            <option value="Male">Male</option>
+            <option value="Female" selected>Female</option>
             <option value="0">NO Binary</option>
           </select>
         </div>
