Moved connection functions from main.js to a new file, connection_utilities

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
   <script src="./scripts/classes/bullet.js"></script>
   <script src="./scripts/classes/starship.js"></script>
   <script src="./scripts/utils.js"></script>
+  <script src="./scripts/connection_utilities.js"></script>
 </head>
 
 <body onload="main()">
