--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,9 @@
   <h1 class="title">Star Trek Simulator</h1>
   <noscript>Your browser does not support JavaScript!</noscript>
 
-  <div id='galaxy'></div>
+  <div id='galaxy'>
+    <a id="room_code"></a>
+  </div>
 
   <div id="formularies">
     <div id="userForm" onsubmit="return false">
