--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   <script src="./scripts/classes/starship.js"></script>
   <script src="./scripts/utils.js"></script>
   <script src="./scripts/connection_utilities.js"></script>
+
 </head>
 
 <body onload="main()">
@@ -29,6 +30,56 @@
   <div id='galaxy'></div>
 
   <div id="formularies">
+    <div class = "join"> Join Room </div>
+    <div class = "create"> Create Room </div>
+    
+    <div class="join-form">
+      <input name="nickName" class="input" type="text" placeholder="Nick Name"> <br />
+      <select name="gender" id ="gender" class="input optional">
+        <option value="nonBinary">Non Binary</option>
+        <option value="female">Female</option>
+        <option value="male">Male</option>
+      </select> <br />
+      <select name="starship" id = "starship" class="input">
+        <option value="enterprise">USS Entreprise</option>
+        <option value="miranda">Clase Miranda</option>
+        <option value="bird">Bird of Prey </option>
+        <option value="devisor">IKS Devisor </option>
+      </select> <br />
+      <select name="team" class="input" id ="team">
+        <option value="klingon">Klingon</option>
+        <option value="federation">Federation</option>
+      </select> <br />
+      <button type="submit" class = "btn" onclick="joinRoom()"> Join! </button> 
+    </div>
+
+    <div class="create-form">
+      <input name="nickName" id="nickName" class="input" type="text" placeholder="Nick Name"> <br />
+      <select name="gender" id ="gender" class="input optional">
+        <option value="nonBinary">Non Binary</option>
+        <option value="female">Female</option>
+        <option value="male">Male</option>   
+      </select> <br />
+      <select name="starship" id = "starship" class="input">
+        <option value="enterprise">USS Entreprise</option>
+        <option value="miranda">Clase Miranda</option>
+        <option value="bird">Bird of Prey </option>
+        <option value="devisor">IKS Devisor </option>
+      </select> <br />
+      <select name="team" class="input" id ="team">
+        <option value="klingon">Klingon</option>
+        <option value="federation">Federation</option>
+      </select> <br />
+      <input name="code" id="code" class="input" type="text" placeholder="Game code">
+      <button type="submit" class = "btn" onclick="joinRoom()"> Join! </button> 
+    </div>
+  </div>
+</body>
+
+</html>
+
+
+  <!-- <div id="formularies">
     <div id="userForm" onsubmit="return false">
       <h2> Create User </h2>
       <form class="form-inline" onsubmit="createRoom();return false">
@@ -97,7 +148,4 @@
           </div>
       </form>
     </div>
-  </div>
-</body>
-
-</html>
+  </div> -->
