limit collision added.

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <!-- Create form -->
     <form onsubmit="createRoom();return false">
       <div class="row">
-        <div id="create_nickname" class="form-input col-6 col-s-12">
+        <div class="form-input col-6 col-s-12">
           <label for="input_nickname">Nick name:</label><br>
           <input type="text" id="input_nickname" name="nickname">
          </div>
