points and health synchronized between players

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,10 @@
   <h1 class="title">Star Trek Simulator</h1>
   <noscript>Your browser does not support JavaScript!</noscript>
 
+  <div id='id'></div>
+  <div id='health'></div>
+  <div id='points'></div>
+
   <div id='galaxy'>
     <a id="room_code"></a>
   </div>
