corrected player class missuse

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,10 @@
 
   <!-- Scripts -->
   <script src="https://unpkg.com/rsup-mqtt"></script>
+  <script src="./scripts/keyEvents.js"></script>
   <script src="./scripts/player.js"></script>
   <script src="./scripts/room.js"></script>
-  <script src="./scripts/starShip.js"></script>
+  <script src="./scripts/starship.js"></script>
   <script src="./scripts/main.js"></script>
 </head>
 
@@ -153,36 +154,6 @@
   <div id='players'>
     <div class='border' id='klingon'>
       <h3>Klingon</h3>
-      <!-- 
-      <div class='user'>
-        <img class='userIcon' src='./assets/user/man.svg'/>
-        <div>
-          <h4>Nickname: Daniel Diaz</h4>
-          <h4>Lives: 1 </h4>
-        </div>
-      </div>
-      <div class='user'>
-        <img class='userIcon' src='./assets/user/noBinary.svg'/>
-        <div>
-          <h4>Nickname: Daniel Diaz</h4>
-          <h4>Lives: 1 </h4>
-        </div>
-      </div>
-      <div class='user'>
-        <img class='userIcon' src='./assets/user/woman.svg'/>
-        <div>
-          <h4>Nickname:Daniel Diaz</h4>
-          <h4>Lives: 1 </h4>
-        </div>
-      </div>
-      <div class='user'>
-        <img class='userIcon' src='./assets/user/woman.svg'/>
-        <div>
-          <h4>Nickname:Daniel Diaz</h4>
-          <h4>Lives: 1 </h4>
-        </div>
-      </div>
--->
     </div>
     <div class='border' id='federation'>
       <h3>Federation</h3>
